# cfalayret_certificados

./: Cargo.toml  Interface.sh  Interface2.sh  README.md  extraer_ascii.sh
meta/: Cargo.toml
meta/src/: main.rs
output/: certificados-mvx.abi.json  certificados-mvx.imports.json  certificados-mvx.mxsc.json  certificados-mvx.wasm
scenarios/: certificados_mvx.scen.json
src/: certificados_mvx.rs
tests/: certificados_mvx_scenario_go_test.rs  certificados_mvx_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
