[package]
name = "certificados-mvx"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/certificados_mvx.rs"

[dependencies.multiversx-sc]
version = "0.58.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.58.0"

[workspace]
members = [
    ".",
    "meta",
]
